# paulicirc

./: .gitignore  README.md  README.rst  autodoc_typehints.py  perf-test.ipynb  pypi-upload.bat  pyproject.toml
docs/: api-toc.rst  autodoc-type-aliases.json  conf.py  getting-started.rst  index.rst  make-api.json  make-api.py  requirements.txt
docs/api/: paulicirc._numpy.rst  paulicirc.builders.rst  paulicirc.circuits.rst  paulicirc.gadgets.rst  paulicirc.layers.rst  paulicirc.rst  paulicirc.utils.numpy.rst  paulicirc.utils.options.rst  paulicirc.utils.rst
paulicirc/: __init__.py  _numpy.py  builders.py  circuits.py  gadgets.py  layers.py  utils.py
paulicirc/utils/: numpy.py  options.py
pauliobf/: __init__.py  _functions.py  _numpy.py  builders.py  circuits.py  gadgets.py  spider_graphs.py
test/: test_00_gadgets.py  test_01_layers.py  test_02_circuits.py  test_03_builders.py  test_04_layers.py
