[project]
name = "pauliobf"
version = "0.0.1"
authors = [{ name = "NeverLocal" }]
description = "Quantum circuit obfuscation based on Pauli gadgets."
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.14.1",
    "numba>=0.61.2",
    "euler>=1.0.2.post0",
    "typing-validation>=1.2.12",
    "autoray>=0.7.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://pauliobf.readthedocs.io"
Repository = "https://github.com/neverlocal/pauliobf"
Issues = "https://github.com/neverlocal/pauliobf/issues"

[build-system]
requires = ["hatchling == 1.26.3"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pyright]
typeCheckingMode = "off"
reportInvalidTypeForm = false

[dependency-groups]
dev = ["pytest>=8.0"]
